# zyntax

./: .env.markflow  .gitignore  BACKLOG.md  CONTINUE_BUG_INVESTIGATION.md  Cargo.toml  LICENSE  PLAN_METHOD_CALL_RESOLUTION.md  PRODUCTION_READY_STATUS.md  README.md  Readme.md  rust_out  test_continue_debug.zig
.github/workflows/: ci.yml  wiki.yml
archive/: README.md
archive/zyn_parser/: README.md
book/: .env  01-introduction.md  02-getting-started.md  03-using-the-cli.md  04-grammar-syntax.md  05-semantic-actions.md  06-typed-ast.md  07-typed-ast-builder.md  08-zig-example.md  09-reference.md  10-packaging-distribution.md  11-hir-builder.md  12-embedding-sdk.md  13-async-runtime.md  14-runtime-plugins.md  15-building-dsls.md  16-image-pipeline-dsl.md  README.md
crates/compiler/: Cargo.toml  README.md
crates/compiler/src/: analysis.rs  associated_type_resolver.rs  async_support.rs  borrow_check.rs  bytecode.rs  cfg.rs  const_eval.rs  cranelift_backend.rs  effect_analysis.rs  effect_codegen.rs  effect_handler_resolution.rs  hir.rs  hir_builder.rs  hir_dump.rs  lib.rs  llvm_backend.rs  llvm_jit_backend.rs  lowering.rs  memory_management.rs  memory_optimization.rs  memory_pass.rs  monomorphize.rs  optimization.rs  pattern_matching.rs  plugin.rs  profiling.rs  ssa.rs  tiered_backend.rs  trait_lowering.rs  typed_cfg.rs  vtable_registry.rs  zpack.rs  zrtl.rs
crates/compiler/src/runtime/: executor.rs  mod.rs  task.rs  waker.rs
crates/compiler/src/stdlib/: async_runtime.rs  hashmap.rs  io.rs  iterator.rs  memory.rs  mod.rs  option.rs  result.rs  string.rs  vec.rs  vec_f64.rs  vec_i32.rs  vec_u8.rs
crates/compiler/tests/: compilation_pipeline_tests.rs  const_generics_integration_test.rs  const_generics_simple_tests.rs  const_generics_tests.rs  continue_debug_test.rs  cranelift_backend_tests.rs  cranelift_backend_tests_new.rs  effect_compilation_tests.rs  end_to_end_comprehensive.rs  end_to_end_simple.rs  expression_lowering_tests.rs  extern_function_tests.rs  extern_lowering_integration_tests.rs  integration_basic_test.rs  integration_control_flow_test.rs  integration_data_structures_test.rs  integration_memory_test.rs  llvm_backend_integration_tests.rs  memory_management_tests.rs  pattern_matching_tests.rs  result_type_tests.rs  trait_dispatch_simple_test.rs  type_resolution_tests.rs
crates/haxe_zyntax_runtime/: Cargo.toml
crates/runtime/: Cargo.toml
crates/typed_ast/: Cargo.toml  Readme.md
crates/whirlwind_adapter/: Cargo.toml  README.md  TESTING.md
crates/zyn_parser/: Cargo.toml  README.md
crates/zyn_peg/: Cargo.toml  GRAMMAR_CONVENTIONS.md
crates/zyn_peg/grammars/: async_test.zyn  haxe.zyn  zig.zyn
crates/zyn_peg/integration_test/: Cargo.toml
crates/zyn_peg/integration_test/src/: lib.rs  parser_impl.rs
crates/zyn_peg/src/: ast.rs  error.rs  generator.rs  lib.rs  runtime.rs  zyn_grammar.pest
crates/zyn_peg/src/codegen/: action_gen.rs  mod.rs  parser_gen.rs  pratt_gen.rs
crates/zyn_peg/src/grammar/: ir.rs  mod.rs  parser.rs
crates/zyn_peg/src/runtime2/: combinator.rs  interpreter.rs  memo.rs  mod.rs  state.rs
crates/zyn_peg/src/typed_ast/: builder.rs  mod.rs
crates/zyn_peg/tests/: codegen_e2e_test.rs  imagepipe_grammar_tests.rs  zig_grammar_test.rs
crates/zynml/: Cargo.toml  ml.zyn
crates/zyntax_cli/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
crates/zyntax_cli/src/: cli.rs  commands.rs  main.rs
crates/zyntax_cli/src/backends/: cranelift_jit.rs  llvm_aot.rs  mod.rs
crates/zyntax_cli/src/formats/: hir_bytecode.rs  mod.rs  typed_ast_json.rs  zyn_grammar.rs
crates/zyntax_embed/: Cargo.toml  README.md
docs/: ARCHITECTURE.md  ASYNC_RUNTIME_DESIGN.md  BYTECODE_FORMAT_SPEC.md  EMBEDDING_SDK.md  GPU_AOT_ARCHITECTURE.md  HAXE_INTEGRATION.md  HIR_BUILDER_EXAMPLE.md  INTEGRATION_PLAN.md  PATTERN_MATCHING.md  PLUGIN_ARCHITECTURE.md  README.md  ZIG_MIGRATION_PLAN.md  ZYN_GRAMMAR_SPEC.md  ZYN_PARSER_IMPLEMENTATION.md  plan-zpack-sdk-stdlib.md  tiered-compilation.md
plugins/: Cargo.toml  README.md  build_static.sh  build_zrtl.sh
reflaxe.zyntax/: .gitignore  BACKLOG.md  FRONTEND_LOWERING_STRATEGY.md  HAXE4_SUPPORT.md  README.md  ROADMAP.md  extraParams.hxml  haxelib.json  run_all_tests.sh
reflaxe.zyntax/runtime/: Cargo.toml  METHOD_MAPPING.md  README.md  TESTING.md  build.rs  method_mappings.json
reflaxe.zyntax/runtime/examples/: generate_manifest.rs
reflaxe.zyntax/runtime/haxe/: FINDINGS.md  INJECTION_STRATEGY.md  README.md  ZyntaxArray.hx  ZyntaxRuntime.hx  ZyntaxString.hx
reflaxe.zyntax/runtime/haxe/zyntax/runtime/: TypeReplacer.hx
reflaxe.zyntax/runtime/src/: array.rs  lib.rs  string.rs
sdk/: zrtl.h
website/: index.html
(+334 files in other folders)
