[package]
name = "zyntax_compiler"
version = "0.1.0"
edition = "2021"
authors = ["Damilare Akinlaja"]
description = "Layered compilation system for Zyntax language"

[dependencies]
# Parser dependency
zyntax_typed_ast = { path = "../typed_ast" }

# Core data structures
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }

# Analysis and optimization
petgraph = "0.6.4"  # Graph algorithms
smallvec = "1.13.2"  # Optimized small vectors
indexmap = "2.2.6"  # Ordered maps
bit-set = "0.5.3"  # Bit sets for liveness analysis

# Serialization for caching
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3.3"  # Fast binary serialization
postcard = { version = "1.0", features = ["alloc"] }  # Compact binary format for bytecode
crc32fast = "1.4"  # CRC32 checksums for bytecode validation

# Error handling
thiserror = { workspace = true }
miette = "7.2.0"

# Logging
log = "0.4"

# Utilities
uuid = { workspace = true }
tempfile = { workspace = true }
rayon = { workspace = true }
fnv = "1.0.7"  # Fast hash function

# Optional features for backend support
cranelift = { version = "0.106", optional = true }
cranelift-codegen = { version = "0.106", optional = true }
cranelift-frontend = { version = "0.106", optional = true }
cranelift-jit = { version = "0.106", optional = true }
cranelift-module = { version = "0.106", optional = true }
cranelift-native = { version = "0.106", optional = true }
inkwell = { version = "0.4", features = ["llvm17-0"], optional = true }  # LLVM bindings

[dev-dependencies]
env_logger = "0.11"

[features]
default = ["cranelift-backend"]
cranelift-backend = ["cranelift", "cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "cranelift-native"]
llvm-backend = ["inkwell"]
all-backends = ["cranelift-backend", "llvm-backend"]