[package]
name = "zyntax_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zyntax"
path = "src/main.rs"

[dependencies]
zyntax_typed_ast = { path = "../typed_ast" }
zyntax_compiler = { path = "../compiler" }
zyn_peg = { path = "../zyn_peg" }
pest = "2.7"
pest_derive = "2.7"
pest_vm = "2.8"
pest_meta = "2.8"

# Runtime libraries (statically linked)
# Standard library runtime (generic I/O functions)
zyntax_runtime = { path = "../runtime" }

# Frontend runtimes (frontend-specific implementations)
haxe_zyntax_runtime = { path = "../../reflaxe.zyntax/runtime" }

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
miette = { workspace = true }

# File I/O
glob = "0.3"
walkdir = "2.5"

# Logging
env_logger = "0.11"
log = "0.4"

# REPL
rustyline = "14.0"
dirs = "5.0"
