[package]
name = "haxe_zyntax_runtime"
version = "0.1.0"
edition = "2021"

# It belongs to the Haxe frontend implementation

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
zyntax_compiler = { path = "../../crates/compiler" }
zyntax_plugin_macros = { path = "../../crates/zyntax_plugin_macros" }
inventory = "0.3"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
manifest = ["serde", "serde_json"]

[[example]]
name = "generate_manifest"
required-features = ["manifest"]
